inputbox added, z-index fixes for other components

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   text-align: center;
   background: white;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
 }
 
 .select-icon {
